--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@jamescoyle/vue-icon": "^0.1.2",
     "@mdi/js": "^7.2.96",
     "@tailwindcss/forms": "^0.5.3",
-    "js-cookie": "^3.0.1"
+    "js-cookie": "^3.0.1",
+    "vue3-carousel": "^0.3.0"
   }
 }
