--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "gsap": "^3.11.5",
     "js-cookie": "^3.0.1",
+    "swiper": "^9.3.2",
     "vue3-carousel": "^0.3.0"
   }
 }
