--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@jamescoyle/vue-icon": "^0.1.2",
     "@mdi/js": "^7.2.96",
     "@tailwindcss/forms": "^0.5.3",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.3",
     "gsap": "^3.11.5",
     "js-cookie": "^3.0.1",
     "swiper": "^9.3.2",
