--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gsap": "^3.11.5",
     "js-cookie": "^3.0.1",
     "swiper": "^9.3.2",
+    "vue-gtag-next": "^1.14.0",
     "vue3-carousel": "^0.3.0"
   }
 }
