--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.3",
+    "@vueuse/components": "^10.7.0",
     "@vueuse/core": "^10.7.0",
     "gsap": "^3.11.5",
     "js-cookie": "^3.0.1",
