--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "js-cookie": "^3.0.1",
     "swiper": "^9.3.2",
     "vue-gtag-next": "^1.14.0",
-    "vue3-carousel": "^0.3.0"
+    "vue-scrollto": "^2.20.0",
+    "vue3-carousel": "^0.3.0",
+    "vue3-toastify": "^0.2.1"
   }
 }
